fixed the vertical alignment of the icon

--- a/src/renderer/css/settings.css
+++ b/src/renderer/css/settings.css
@@ -102,6 +102,7 @@
      font-weight: 600;
      font-size: 1rem;
      text-align: center;
+     vertical-align: middle;
      color: var(--primary-accent);
 }
 
